/courses/:id - avoid rating jumps

--- a/frontend/components/CourseActions/index.css
+++ b/frontend/components/CourseActions/index.css
@@ -199,6 +199,7 @@
           }
         }
         > li.course-star-rating{
+          min-height: 28px;
           > div.stat{
             > i.fa-user-o{
               font-size: 11px;
